fix: lucene setup fix